# mini-openclaw

./: DESIGN.md  config.json  feishu_bot.py  gateway_agent.py  main.py  models.json  pyproject.toml
sessions/: main.jsonl  main_feishu_test_sender.jsonl  sessions_index.json
src/mini_openclaw.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/mini_openclaw/agent/: loop.py
src/mini_openclaw/channel/: feishu.py
src/mini_openclaw/config/: config.py
src/mini_openclaw/context/: compaction.py
src/mini_openclaw/memory/: memory.py
src/mini_openclaw/models/: provider.py  registry.py
src/mini_openclaw/prompt/: builder.py
src/mini_openclaw/session/: message.py  router.py  session.py  store.py
src/mini_openclaw/skills/: skills.py
src/mini_openclaw/tools/: exec_tool.py  playwright_tool.py  tool.py  web_search_tool.py
tests/: test_agent.py  test_config.py  test_context.py  test_models.py  test_provider.py  test_session.py  test_tools.py
